<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2_edit"
    tools:context=".DharshanActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/headerEngText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dharshan_header_english"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/bodyEngText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dharshan_body_english"
        android:textColor="@color/black"
        android:lineSpacingExtra="10sp"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/headerEngText"
        />
    <TextView
        android:id="@+id/headerTamText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dharshan_header_tamil"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/bodyEngText"
        />

    <TextView
        android:id="@+id/bodyTamText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dharshan_body_tamil"
        android:lineSpacingExtra="10sp"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/headerTamText"
        />
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>