<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="#2F4F4F"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bodySubEngText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/teaching_body_sub_english"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/startTimelayout"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/bodySubEngText">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/starting_time"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/startTimeEditText"
            android:layout_weight="0.3"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:background="#2F4F4F"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/am"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/startTimeIndicator"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/endTimelayout"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/startTimelayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/ending_time"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/endTimeEditText"
            android:layout_weight="0.3"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:background="#2F4F4F"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/pm"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/endTimeIndicator"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/alarmIntervalLayout"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/endTimelayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/AlarmInterval"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:id="@+id/alarmIntervalSpinner"
            android:textAlignment="textEnd"
            android:spinnerMode="dialog"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/hours"
            android:textSize="20sp"
            android:id="@+id/intervalIndicator"
            android:textColor="@color/white"
            android:textAlignment="textEnd"/>

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:id="@+id/weekdaysLayout"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/alarmIntervalLayout">-->

<!--        <CheckBox-->
<!--            android:id="@+id/sunday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="S"/>-->
<!--        <CheckBox-->
<!--            android:id="@+id/monday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="M"/>-->
<!--        <CheckBox-->
<!--            android:id="@+id/tuesday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="T"/>-->
<!--        <CheckBox-->
<!--            android:id="@+id/wednesday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="W"/>-->
<!--        <CheckBox-->
<!--            android:id="@+id/thursday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="T"/>-->
<!--        <CheckBox-->
<!--            android:id="@+id/friday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="F"/>-->
<!--        <CheckBox-->
<!--            android:id="@+id/saturday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="S"/>-->

<!--    </LinearLayout>-->

    <com.dpro.widgets.WeekdaysPicker
        android:id="@+id/weekdaysPicker"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:highlight_color="@color/purple_200"
        app:background_color="@color/white"
        app:sunday_first_day="false" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setAlarmBtn"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/endTimelayout"
        android:text="@string/SetAlarmText"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/button_border">
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currentAlarmTxt"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:gravity="center"/>

</LinearLayout>