<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2_edit"
    android:orientation="vertical"
    tools:context=".TeachingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headerEngText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/teaching_header_english"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bodyEngText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="10sp"
                android:text="@string/teaching_body_english"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/headerEngText" />


            <TextView
                android:id="@+id/headerTamText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/teaching_header_tamil"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/bodySubEngText" />

            <TextView
                android:id="@+id/bodyTamText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="10sp"
                android:text="@string/teaching_body_tamil"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="@+id/headerTamText" />
<!--            <TextView-->
<!--                android:id="@+id/bodyTamSubText"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:lineSpacingExtra="10sp"-->
<!--                android:text="@string/teaching_body_sub_tamil"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="20sp"-->
<!--                app:layout_constraintTop_toTopOf="@+id/bodyTamText" />-->

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>